sprint4/tests/error/20_list_get_oob.py
# List get out of bound
#
a = []
print(a[0])
